--- a/.github/workflows/PROJECT-NEXUS-MODULE-CI-BUILD-CHECK.yml
+++ b/.github/workflows/PROJECT-NEXUS-MODULE-CI-BUILD-CHECK.yml
@@ -44,6 +44,9 @@ jobs:
       with:
         gradle-version: wrapper
 
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
     - name: Clean Build Directory
       run: ./gradlew clean
 
