--- a/.github/workflows/PROJECT-NEXUS-PUBLISH.yml
+++ b/.github/workflows/PROJECT-NEXUS-PUBLISH.yml
@@ -25,6 +25,9 @@ jobs:
         run: |
           echo -e "${{ secrets.GRADLE_PROPERTIES }}" > gradle.properties
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Get version
         id: get_version
         run: |
