SUHAISERVER 자동 연결 및 기본 Ollama 연결 기능 추가 : feat : 기본 Ollama 연결 및 초기화 로직 추가 : https://github.com/Cassiiopeia/suh-ai-module/issues/3

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ out/
 /.claude/settings.local.json
 /gradle.properties
 /example-suh-project-utility/
+
+### Test Configuration (API Keys) ###
+# 테스트용 설정 파일 제외 (API 키 포함)
+src/test/resources/application.yml
+src/test/resources/application.properties
+src/test/resources/application*.yml
+src/test/resources/application*.properties
