--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ src/test/resources/application.yml
 src/test/resources/application.properties
 src/test/resources/application*.yml
 src/test/resources/application*.properties
+/src/test/java/kr/suhsaechan/ai/service/OllamaServiceTest.java
