--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@ src/test/resources/application.properties
 src/test/resources/application*.yml
 src/test/resources/application*.properties
 /src/test/java/kr/suhsaechan/ai/service/OllamaServiceTest.java
+
+# ====================================================================
+# SUH-DEVOPS-TEMPLATE: Auto-added entries
+# ====================================================================
+/.report
